--- a/circle.yml
+++ b/circle.yml
@@ -4,12 +4,12 @@ machine:
 
 dependencies:
   pre:
-    - pyenv global 2.6.8
-    - pyenv global 3.3.2
-    - pyenv global 3.4.1
+    - ln -s ~/.pyenv/versions/2.6.8/bin/python2.6 ~/bin
+    - ln -s ~/.pyenv/versions/3.3.2/bin/python3.3 ~/bin
+    - ln -s ~/.pyenv/versions/3.4.1/bin/python3.4 ~/bin
   override:
     - pip install tox
 
 test:
   override:
-    - tox
+    - env PATH="$HOME/bin:$PATH" tox
