--- a/tox.ini
+++ b/tox.ini
@@ -2,6 +2,6 @@
 envlist = py26,py27,py33,py34
 
 [testenv]
-commands = nosetests
+commands = nosetests chain_bitcoin
 deps = -rrequirements-install.txt
        -rrequirements-test.txt
